# update-namesilo-record

./: .gitignore  Dockerfile  LICENSE  README.md  updateNamesiloRecord.py
c/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  conanfile.txt
c/src/: CMakeLists.txt  env_vars.c  env_vars.h  main.c  namesilo.c  namesilo.h  request.c  request.h  util.c  util.h
dotnetcore/: Dockerfile  Dockerfile.alpine  UpdateNamesiloRecord.sln
dotnetcore/UpdateNamesiloRecord/: EnvVars.cs  IpFetcher.cs  Namesilo.cs  Program.cs  Request.cs  UpdateNamesiloRecord.csproj  Utility.cs
golang/: .gitignore  Dockerfile  build.sh
golang/src/: main.go
golang/src/models/: dnsListRecords.go  dnsUpdateRecord.go  namesiloRequest.go
golang/src/requests/: fetchUrl.go  getIp.go  namesilo.go
golang/src/util/: envVars.go
nodejs_typescript/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
nodejs_typescript/src/: env_var.ts  index.ts  namesilo.ts  request.ts  utility.ts
python3/: .dockerignore  Dockerfile  README.md  updateNamesiloRecord.py
resources/: update_namesilo_record.drawio
ruby/: Dockerfile  Gemfile  README.md  update_namesilo_record.rb
ruby/lib/: env_vars.rb  namesilo.rb  request.rb  utility.rb
shell_script/: .gitignore  Dockerfile  updateNamesiloRecord.sh
